# sBP

./: .gitignore  cptVSsd_cpt.xlsx  final_experiments_data.xlsx  final_experiments_data_with__SUBSEQ_tree_expansion_performance.xlsx  preliminary_results.xlsx  readme.txt  sbp-accuracy-other-predictors.xlsx  subseq F counters replacement with rrr bitstring.xlsx  ~$final_experiments_data.xlsx  ~$preliminary_results.xlsx  ~$sbp-accuracy-other-predictors.xlsx
simple_bs_predictor/: CMakeLists.txt  KOSARAK.fold.1.consequent.txt  KOSARAK.fold.1.queries.txt  Makefile  backwardsSearchBWT.cpp  backwardsSearchBWT.h  compile_commands.json  ct_coutput_correct.txt  ct_coutput_wrong.txt  debug.query.txt  instruments_guide_profiling.txt  levelOrderQueries.cpp  main.cpp  predictor.cpp  predictor.h  program  ranges_size_coutput_correct.txt  ranges_size_coutput_wrong.txt  rank_select_performance_test.cpp  sbp.KOSARAK.fold.1.answers.debug.txt  screenlog.0.subSeq.var.length  screenlog.0.subSeq.var.query  screenlog.0.subSeq.var.seq  screenlog.0.subSeq.var.sigma  script.sh  simple_exp.cpp  spice_performance_sbp.txt  subseqPredictor - dubl - couts.cpp  subseqPredictor - old.cpp  subseqPredictor.cpp  subseqPredictor.h  suffixArray.cpp  suffixArray.h  treeExpansion.cpp  wt_distinct_elem_test.cpp
simple_bs_predictor/clion-init-settings/: customTargets.xml  modules.xml
simple_bs_predictor/instrumentscli0.trace/: open.creq
simple_bs_predictor/output_answers/: sbp.BIBLE_CHAR.performance.results.txt  sbp.BIBLE_WORD.performance.results.txt  sbp.BMS.performance.results.txt  (+4 more)
(+326 files in other folders)
